Adding separate system for (Free)BSD from generic Linux. wrong class field type.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,6 +53,7 @@ endif()
 set (Apple 0)
 set (Windows 0)
 set (Linux 0)
+set (Bsd 0)
 set (NOT_DWORD_DEFINED 0)
 if( NOT WIN32 )
   if(PANDORA)
@@ -86,6 +87,9 @@ if( NOT WIN32 )
   else()
     set (Apple 0)
     set (Linux 1) #TODO: Should not assume this? What if BSD/DOS/whatever-have-you?
+    if (${CMAKE_SYSTEM_NAME} MATCHES "FreeBSD")
+       set(Bsd 1)
+    endif()
     set (NOT_DWORD_DEFINED 1)
     if (NOT DISABLE_MALIGN_DOUBLE) #Only compile with -malign-double if not told to disable. Pass via command line flags.
       set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -malign-double")
