* Fixed Steamworks compilation on Mac.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,13 @@ endif(NOT CMAKE_BUILD_TYPE)
 if (DEFINED ENV{STEAMWORKS_ENABLED})
   set (STEAMWORKS_ENABLED $ENV{STEAMWORKS_ENABLED})
 else()
-  set (STEAMWORKS_ENABLED 0)
+  set (STEAMWORKS_ENABLED 1)
+endif()
+
+if (DEFINED ENV{EOS_ENABLED})
+  set (EOS_ENABLED $ENV{EOS_ENABLED})
+else()
+  set (EOS_ENABLED 0)
 endif()
 
 #FMOD can be disabled in one of two ways:
@@ -47,6 +53,16 @@ message("------------------------")
 else()
 message("------------------------")
 message("Building without steamworks")
+message("------------------------")
+endif()
+
+if (EOS_ENABLED)
+message("------------------------")
+message("Building with EOS")
+message("------------------------")
+else()
+message("------------------------")
+message("Building without EOS")
 message("------------------------")
 endif()
 
@@ -212,6 +228,13 @@ if (STEAMWORKS_ENABLED)
   include_directories(${STEAMWORKS_INCLUDE_DIR})
 endif()
 
+if( NOT WIN32 AND EOS_ENABLED)
+  find_package(EOS REQUIRED)
+endif()
+if (EOS_ENABLED)
+  include_directories(${EOS_INCLUDE_DIR})
+endif()
+
 
 # Add include directories
 #include_directories(${GLM_INCLUDE_DIR})
@@ -309,6 +332,9 @@ if(WIN32)
     #target_link_libraries(barony -lsteamworks_cwrapper -lstdc++)
     target_link_libraries(barony -lsteam_api)
   endif()
+  if(EOS_ENABLED)
+    target_link_libraries(barony -lsteam_api) #TODO: Fix for Windows.
+  endif()
 else()
   if( ("${CMAKE_SIZEOF_VOID_P}" EQUAL "8") AND (NOT APPLE) )
     # 64 bit
@@ -320,7 +346,7 @@ else()
     #target_link_libraries(barony ${STEAMWORKS_CWRAPPER_LIBRARIES} -lstdc++)
   endif()
   if (APPLE)
-    target_link_libraries(barony ${GLUT_LIBRARIES} ${PROJECT_SOURCE_DIR}/libpng16.16.dylib)
+    target_link_libraries(barony ${GLUT_LIBRARIES} ${PROJECT_SOURCE_DIR}/libpng16.16.dylib) #Wait...what? if(APPLE) in if(WIN32)? What was I thinking back then, haha.
   endif()
   if (${CMAKE_SYSTEM_NAME} MATCHES "BSD")
     # For backtrace
@@ -353,6 +379,9 @@ endif()
 if(APPLE)
   if (FMOD_ENABLED)
     target_link_libraries(barony -lfmodex) #Finally manually link fmod for mac.
+  endif()
+  if (EOS_ENABLED)
+    target_link_libraries(barony ${EOS_LIBRARY})
   endif()
 endif()
 target_link_libraries(barony ${EXTRA_LIBS}) #Apple needs this for OpenGL to work.
@@ -409,6 +438,9 @@ if(WIN32)
     #target_link_libraries(editor -lsteamworks_cwrapper -lstdc++)
     target_link_libraries(${EDITOR_EXE_NAME} -lsteam_api)
   endif()
+  if (EOS_ENABLED)
+    target_link_libraries(${EDITOR_EXE_NAME} ${EOS_LIBRARY}) #TODO: Fix for Windows.
+  endif()
 else()
   if( ("${CMAKE_SIZEOF_VOID_P}" EQUAL "8") AND (NOT APPLE))
     # 64 bit
@@ -435,6 +467,9 @@ endif()
 if (APPLE)
   target_link_libraries(${EDITOR_EXE_NAME} ${PHYSFS_LIBRARY})
   target_link_libraries(${EDITOR_EXE_NAME} ${IOKit_LIBRARY})
+  if (EOS_ENABLED)
+    target_link_libraries(${EDITOR_EXE_NAME} ${EOS_LIBRARY})
+  endif()
 endif()
 if(WIN32)
 	target_link_libraries(${EDITOR_EXE_NAME} wsock32 ws2_32)
