--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -103,6 +103,7 @@ list(APPEND GAME_SOURCES
 	"${CMAKE_CURRENT_SOURCE_DIR}/actmagictrap.cpp"
 	"${CMAKE_CURRENT_SOURCE_DIR}/steam_shared.cpp"
 	"${CMAKE_CURRENT_SOURCE_DIR}/mod_tools.cpp"
+	"${CMAKE_CURRENT_SOURCE_DIR}/json.cpp"
 )
 
 if( WIN32 )
@@ -130,6 +131,8 @@ list(APPEND EDITOR_SOURCES
 	"${CMAKE_CURRENT_SOURCE_DIR}/stat_shared.cpp"
 	"${CMAKE_CURRENT_SOURCE_DIR}/items_editor.cpp"
 	"${CMAKE_CURRENT_SOURCE_DIR}/steam_shared.cpp"
+	"${CMAKE_CURRENT_SOURCE_DIR}/json.cpp"
+	#"${CMAKE_CURRENT_SOURCE_DIR}/eos.cpp"
 )
 
 add_subdirectory(magic)
