--- a/VS.2015/Barony/Barony.vcxproj.filters
+++ b/VS.2015/Barony/Barony.vcxproj.filters
@@ -393,6 +393,9 @@
     <ClCompile Include="..\..\src\interface\ui_general.cpp">
       <Filter>Source Files\interface</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\src\lobbies.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\src\book.hpp">
@@ -481,6 +484,9 @@
     </ClInclude>
     <ClInclude Include="..\..\src\interface\ui.hpp">
       <Filter>Header Files\interface</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\src\lobbies.hpp">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
