--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -105,6 +105,7 @@ list(APPEND GAME_SOURCES
 	"${CMAKE_CURRENT_SOURCE_DIR}/mod_tools.cpp"
 	"${CMAKE_CURRENT_SOURCE_DIR}/json.cpp"
 	"${CMAKE_CURRENT_SOURCE_DIR}/eos.cpp"
+	"${CMAKE_CURRENT_SOURCE_DIR}/mod_tools.cpp"
 )
 
 if( WIN32 )
@@ -134,6 +135,7 @@ list(APPEND EDITOR_SOURCES
 	"${CMAKE_CURRENT_SOURCE_DIR}/steam_shared.cpp"
 	"${CMAKE_CURRENT_SOURCE_DIR}/json.cpp"
 	#"${CMAKE_CURRENT_SOURCE_DIR}/eos.cpp"
+	"${CMAKE_CURRENT_SOURCE_DIR}/mod_tools.cpp"
 )
 
 add_subdirectory(magic)
