--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -106,6 +106,7 @@ list(APPEND GAME_SOURCES
 	"${CMAKE_CURRENT_SOURCE_DIR}/json.cpp"
 	"${CMAKE_CURRENT_SOURCE_DIR}/eos.cpp"
 	"${CMAKE_CURRENT_SOURCE_DIR}/mod_tools.cpp"
+	"${CMAKE_CURRENT_SOURCE_DIR}/lobbies.cpp"
 )
 
 if( WIN32 )
