--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,6 +17,28 @@ else()
   set (EOS_ENABLED 0)
 endif()
 
+if (DEFINED ENV{BUILD_ENV_PR})
+  set (BUILD_ENV_PR $ENV{BUILD_ENV_PR})
+endif()
+if (DEFINED ENV{BUILD_ENV_SA})
+  set (BUILD_ENV_SA $ENV{BUILD_ENV_SA})
+endif()
+if (DEFINED ENV{BUILD_ENV_DE})
+  set (BUILD_ENV_DE $ENV{BUILD_ENV_DE})
+endif()
+if (DEFINED ENV{BUILD_ENV_CC})
+  set (BUILD_ENV_CC $ENV{BUILD_ENV_CC})
+endif()
+if (DEFINED ENV{BUILD_ENV_CS})
+  set (BUILD_ENV_CS $ENV{BUILD_ENV_CS})
+endif()
+
+if (DEFINED ENV{EDITOR_ENABLED})
+  set (EDITOR_ENABLED $ENV{EDITOR_ENABLED})
+else()
+  set (EDITOR_ENABLED 0)
+endif()
+
 #FMOD can be disabled in one of two ways:
 # * Not having FMOD installed will automatically disable FMOD (and, consequently, the game's sound engine as a whole).
 # * Running cmake with -DFMOD_ENABLED=OFF
@@ -41,7 +63,9 @@ set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")
 
 set(CMAKE_OSX_ARCHITECTURES x86_64)
 
-set(EDITOR_EXE_NAME "editor" CACHE STRING "Editor executable name")
+if (EDITOR_ENABLED)
+  set(EDITOR_EXE_NAME "editor" CACHE STRING "Editor executable name")
+endif()
 option(DATA_DIR "Points to install data directory" FALSE)
 
 if (STEAMWORKS_ENABLED)
@@ -414,84 +438,88 @@ endif()
 
 add_definitions(-DBASE_DATA_DIR=\"${BASE_DATA_DIR}\")
 
-if (APPLE)
-  #add_executable(editor OSX/SDLmain.m ${EDITOR_SOURCES})
-  #set(MACOSX_BUNDLE_ICON_FILE "${PROJECT_SOURCE_DIR}/editor.icns")
-  #add_executable(editor MACOSX_BUNDLE OSX/SDLmain.m ${EDITOR_SOURCES} ${COPY_FRAMEWORKS} libfmodex.dylib  /opt/local/lib/libpng16.16.dylib)
-  #add_executable(editor MACOSX_BUNDLE OSX/SDLmain.m ${EDITOR_SOURCES} libfmodex.dylib  /opt/local/lib/libpng16.16.dylib)
-  if (FMOD_ENABLED)
-	  add_executable(${EDITOR_EXE_NAME} MACOSX_BUNDLE ${EDITOR_SOURCES} libfmodex.dylib ${PROJECT_SOURCE_DIR}/libpng16.16.dylib)
+if (EDITOR_ENABLED)
+  if (APPLE)
+    #add_executable(editor OSX/SDLmain.m ${EDITOR_SOURCES})
+    #set(MACOSX_BUNDLE_ICON_FILE "${PROJECT_SOURCE_DIR}/editor.icns")
+    #add_executable(editor MACOSX_BUNDLE OSX/SDLmain.m ${EDITOR_SOURCES} ${COPY_FRAMEWORKS} libfmodex.dylib  /opt/local/lib/libpng16.16.dylib)
+    #add_executable(editor MACOSX_BUNDLE OSX/SDLmain.m ${EDITOR_SOURCES} libfmodex.dylib  /opt/local/lib/libpng16.16.dylib)
+    if (FMOD_ENABLED)
+      add_executable(${EDITOR_EXE_NAME} MACOSX_BUNDLE ${EDITOR_SOURCES} libfmodex.dylib ${PROJECT_SOURCE_DIR}/libpng16.16.dylib)
+    else()
+      add_executable(${EDITOR_EXE_NAME} MACOSX_BUNDLE ${EDITOR_SOURCES} ${PROJECT_SOURCE_DIR}/libpng16.16.dylib)
+    endif()
+    #SET_SOURCE_FILES_PROPERTIES(${MACOSX_BUNDLE_ICON_FILE} PROPERTIES MACOSX_PACKAGE_LOCATION "Resources")
+    set_source_files_properties(${EDITOR_SOURCES} PROPERTIES COMPILE_FLAGS "-x objective-c++")
   else()
-	  add_executable(${EDITOR_EXE_NAME} MACOSX_BUNDLE ${EDITOR_SOURCES} ${PROJECT_SOURCE_DIR}/libpng16.16.dylib)
+    add_executable(${EDITOR_EXE_NAME} ${EDITOR_SOURCES})
   endif()
-  #SET_SOURCE_FILES_PROPERTIES(${MACOSX_BUNDLE_ICON_FILE} PROPERTIES MACOSX_PACKAGE_LOCATION "Resources")
-  set_source_files_properties(${EDITOR_SOURCES} PROPERTIES COMPILE_FLAGS "-x objective-c++")
-else()
-	add_executable(${EDITOR_EXE_NAME} ${EDITOR_SOURCES})
-endif()
 
-if(WIN32)
-	target_link_libraries(${EDITOR_EXE_NAME} -lmingw32 -lSDL2main -lSDL2 -lSDL2_net -lSDL2_image -lSDL2_ttf)
-  if(STEAMWORKS_ENABLED)
-    #target_link_libraries(editor -lsteamworks_cwrapper -lstdc++)
-    target_link_libraries(${EDITOR_EXE_NAME} -lsteam_api)
-  endif()
-  if (EOS_ENABLED)
-    target_link_libraries(${EDITOR_EXE_NAME} ${EOS_LIBRARY}) #TODO: Fix for Windows.
-  endif()
-else()
-  if( ("${CMAKE_SIZEOF_VOID_P}" EQUAL "8") AND (NOT APPLE))
-    # 64 bit
-    target_link_libraries(${EDITOR_EXE_NAME} -L/usr/lib64 -lstdc++)
-  endif()
-  target_link_libraries(${EDITOR_EXE_NAME} ${SDL2_LIBRARIES} ${SDL2_LIBRARY} ${SDL2IMAGE_LIBRARIES} ${SDL2_IMAGE_LIBRARIES} ${SDL2_NET_LIBRARIES} ${SDL2_TTF_LIBRARIES} ${SDL2TTF_LIBRARY})
-  if (STEAMWORKS_ENABLED)
-	  target_link_libraries(${EDITOR_EXE_NAME} ${STEAMWORKS_LIBRARY})
-    #target_link_libraries(editor ${STEAMWORKS_CWRAPPER_LIBRARIES} -lstdc++)
-  endif()
-endif()
-target_link_libraries(${EDITOR_EXE_NAME} ${OPENGL_LIBRARIES})
-target_link_libraries(${EDITOR_EXE_NAME} ${THREADS_LIBRARIES})
-target_link_libraries(${EDITOR_EXE_NAME} -lm -lc)
-# We need to link to Winsock if we're on Windows
-if( NOT WIN32 AND NOT APPLE)
-  #Remember, Windows and Mac aren't using find_package for FMOD and PNG.
-  target_link_libraries(${EDITOR_EXE_NAME} ${PHYSFS_LIBRARY})
-  target_link_libraries(${EDITOR_EXE_NAME} ${PNG_LIBRARY})
-  if (FMOD_FOUND)
-	  target_link_libraries(${EDITOR_EXE_NAME} ${FMOD_LIBRARY})
-  endif()
-endif()
-if (APPLE)
-  target_link_libraries(${EDITOR_EXE_NAME} ${PHYSFS_LIBRARY})
-  target_link_libraries(${EDITOR_EXE_NAME} ${IOKit_LIBRARY})
-  if (EOS_ENABLED)
-    target_link_libraries(${EDITOR_EXE_NAME} ${EOS_LIBRARY})
-  endif()
-endif()
-if(WIN32)
-	target_link_libraries(${EDITOR_EXE_NAME} wsock32 ws2_32)
-	target_link_libraries(${EDITOR_EXE_NAME} -lfmodex)
-endif()
-if (APPLE)
-  if (FMOD_ENABLED)
-	  target_link_libraries(${EDITOR_EXE_NAME} -lfmodex) #Finally manually link fmod for mac.
-  endif()
-endif()
-target_link_libraries(${EDITOR_EXE_NAME} ${EXTRA_LIBS}) #Apple needs this for OpenGL to work.
-if (OPENAL)
-	target_link_libraries(${EDITOR_EXE_NAME} ${OPENAL_LIBRARY})
-  if(TREMOR_ENABLED)
-	  target_link_libraries(${EDITOR_EXE_NAME} ${TREMOR_LIBRARY})
+  if(WIN32)
+    target_link_libraries(${EDITOR_EXE_NAME} -lmingw32 -lSDL2main -lSDL2 -lSDL2_net -lSDL2_image -lSDL2_ttf)
+    if(STEAMWORKS_ENABLED)
+      #target_link_libraries(editor -lsteamworks_cwrapper -lstdc++)
+      target_link_libraries(${EDITOR_EXE_NAME} -lsteam_api)
+    endif()
+    if (EOS_ENABLED)
+      target_link_libraries(${EDITOR_EXE_NAME} ${EOS_LIBRARY}) #TODO: Fix for Windows.
+    endif()
   else()
-	  target_link_libraries(${EDITOR_EXE_NAME} ${VORBISFILE_LIBRARY})
+    if( ("${CMAKE_SIZEOF_VOID_P}" EQUAL "8") AND (NOT APPLE))
+      # 64 bit
+      target_link_libraries(${EDITOR_EXE_NAME} -L/usr/lib64 -lstdc++)
+    endif()
+    target_link_libraries(${EDITOR_EXE_NAME} ${SDL2_LIBRARIES} ${SDL2_LIBRARY} ${SDL2IMAGE_LIBRARIES} ${SDL2_IMAGE_LIBRARIES} ${SDL2_NET_LIBRARIES} ${SDL2_TTF_LIBRARIES} ${SDL2TTF_LIBRARY})
+    if (STEAMWORKS_ENABLED)
+      target_link_libraries(${EDITOR_EXE_NAME} ${STEAMWORKS_LIBRARY})
+      #target_link_libraries(editor ${STEAMWORKS_CWRAPPER_LIBRARIES} -lstdc++)
+    endif()
   endif()
-endif()
+  target_link_libraries(${EDITOR_EXE_NAME} ${OPENGL_LIBRARIES})
+  target_link_libraries(${EDITOR_EXE_NAME} ${THREADS_LIBRARIES})
+  target_link_libraries(${EDITOR_EXE_NAME} -lm -lc)
+  # We need to link to Winsock if we're on Windows
+  if( NOT WIN32 AND NOT APPLE)
+    #Remember, Windows and Mac aren't using find_package for FMOD and PNG.
+    target_link_libraries(${EDITOR_EXE_NAME} ${PHYSFS_LIBRARY})
+    target_link_libraries(${EDITOR_EXE_NAME} ${PNG_LIBRARY})
+    if (FMOD_FOUND)
+      target_link_libraries(${EDITOR_EXE_NAME} ${FMOD_LIBRARY})
+    endif()
+  endif()
+  if (APPLE)
+    target_link_libraries(${EDITOR_EXE_NAME} ${PHYSFS_LIBRARY})
+    target_link_libraries(${EDITOR_EXE_NAME} ${IOKit_LIBRARY})
+    if (EOS_ENABLED)
+      target_link_libraries(${EDITOR_EXE_NAME} ${EOS_LIBRARY})
+    endif()
+  endif()
+  if(WIN32)
+    target_link_libraries(${EDITOR_EXE_NAME} wsock32 ws2_32)
+    target_link_libraries(${EDITOR_EXE_NAME} -lfmodex)
+  endif()
+  if (APPLE)
+    if (FMOD_ENABLED)
+      target_link_libraries(${EDITOR_EXE_NAME} -lfmodex) #Finally manually link fmod for mac.
+    endif()
+  endif()
+  target_link_libraries(${EDITOR_EXE_NAME} ${EXTRA_LIBS}) #Apple needs this for OpenGL to work.
+  if (OPENAL)
+    target_link_libraries(${EDITOR_EXE_NAME} ${OPENAL_LIBRARY})
+    if(TREMOR_ENABLED)
+      target_link_libraries(${EDITOR_EXE_NAME} ${TREMOR_LIBRARY})
+    else()
+      target_link_libraries(${EDITOR_EXE_NAME} ${VORBISFILE_LIBRARY})
+    endif()
+  endif()
+endif(EDITOR_ENABLED)
 
 if (NOT APPLE AND UNIX)
-  install(TARGETS ${EDITOR_EXE_NAME}
-    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR} COMPONENT Runtime
-  )
+  if (EDITOR_ENABLED)
+    install(TARGETS ${EDITOR_EXE_NAME}
+      RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR} COMPONENT Runtime
+    )
+  endif()
 
   install(DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/lang DESTINATION ${CMAKE_INSTALL_DATAROOTDIR}/barony)
 
