--- a/src/Config.hpp.in
+++ b/src/Config.hpp.in
@@ -21,6 +21,11 @@
 
 #if @EOS_ENABLED@
 	#define USE_EOS
+	#define BUILD_ENV_PR "@BUILD_ENV_PR@"
+	#define BUILD_ENV_SA "@BUILD_ENV_SA@"
+	#define BUILD_ENV_DE "@BUILD_ENV_DE@"
+	#define BUILD_ENV_CC "@BUILD_ENV_CC@"
+	#define BUILD_ENV_CS "@BUILD_ENV_CS@"
 #endif
 
 #if @FMOD@
