* Fixed build on Mac

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,6 +32,9 @@ endif()
 if (DEFINED ENV{BUILD_ENV_CS})
   set (BUILD_ENV_CS $ENV{BUILD_ENV_CS})
 endif()
+if (DEFINED ENV{BUILD_ENV_GSE})
+  set (BUILD_ENV_GSE $ENV{BUILD_ENV_GSE})
+endif()
 
 if (DEFINED ENV{EDITOR_ENABLED})
   set (EDITOR_ENABLED $ENV{EDITOR_ENABLED})
